--- a/HOMEWORK/index.html
+++ b/HOMEWORK/index.html
@@ -16,10 +16,13 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="header_panel">
-                            <div class="logo_block">
-                                
+                            <div class="button">
+                                <a href="#">Download Template</a>
                             </div>
-                            <div class="responsive_block"></div>
+                            </div>
+                            <!-- <div class="responsive_block">
+
+                            </div> -->
                         </div>
                     </div>
                 </div>
