--- a/HOMEWORK/index.html
+++ b/HOMEWORK/index.html
@@ -16,13 +16,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="header_panel">
-                            <div class="button">
-                                <a href="#">Download Template</a>
-                            </div>
-                            </div>
-                            <!-- <div class="responsive_block">
-
-                            </div> -->
+                            <div class="logo"></div>
+                            <div class="responsive"></div>
                         </div>
                     </div>
                 </div>
