Events, Social and Footer are done

--- a/HOMEWORK/index.html
+++ b/HOMEWORK/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,295 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <title>SASS-BOOTSTRAP</title>
 </head>
+
 <body>
     <header>
         <section id="header">
-            <div class="container fluid">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="header_panel">
-                            <div class="logo"></div>
-                            <div class="responsive"></div>
+                            <div class="logo_side">
+                                <ul>
+                                    <li><a href="#"><img src="assets/image/logo.webp" alt=""></a></li>
+                                    <li><a href="#"><span>+</span>DEJEE</a></li>
+                                </ul>
+                            </div>
+                            <div class="responsive_side">
+                                <ul>
+                                    <li><a href="#"><i class="flaticon-tv"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-computer-tablet"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-phone"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-cloud-storage-download"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-remove-symbol"></i></a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <!-- <section id="intro" style="background-image: url('assets/image/hero_bg_1.webp')">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+
+                    </div>
+                </div>
+            </div>
+        </section> -->
+        <section id="djs" class="p-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="section_header">
+                            <div class="header_name">
+                                <h1>OUR DJS</h1>
+                            </div>
+                            <div class="header_desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga
+                                itaque deserunt officia, error reiciendis ab quod?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="djs_item">
+                            <div class="djs_image">
+                                <img src="assets/image/person_1.webp" alt="">
+                            </div>
+                            <div class="overflow">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="djs_item">
+                                    <div class="djs_image">
+                                        <img src="assets/image/person_1.webp" alt="">
+                                    </div>
+                                    <div class="overflow">
+                                        <ul>
+                                            <li>
+                                                <div class="dj_name">
+                                                    <h1>Megan Smith</h1>
+                                                    <span>Creative Director</span>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="dj_desc">
+                                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="social_mini">
+                                                    <ul>
+                                                        <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                        <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a></li>
+                                                        <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                                    </ul>
+                                                </div>                                    
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="djs_item">
+                                    <div class="djs_image">
+                                        <img src="assets/image/person_1.webp" alt="">
+                                    </div>
+                                    <div class="overflow">
+                                        
+                                    </div>
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="events" class="p-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="section_header">
+                            <div class="header_name">
+                                <h1>NEWS & EVENTS</h1>
+                            </div>
+                            <div class="header_desc">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt officia, error reiciendis ab quod?
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="events_item">
+                            <div class="events_image">
+                                <img src="assets/image/img_4.jpg" alt="">
+                            </div>
+                            <div class="events_desc">
+                                    <ul>
+                                            <li>
+                                            <span class="date">JAN  20TH, 2019 </span>
+                                            </li>
+                                            <li>
+                                                <a href="#">This Is The Day, Party, Party!</a>
+                                            </li>
+                                        </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="events_item">
+                                    <div class="events_image">
+                                        <img src="assets/image/img_2.jpg" alt="">
+                                    </div>
+                                    <div class="events_desc">
+                                        <ul>
+                                            <li>
+                                            <span class="date">JAN  20TH, 2019 </span>
+                                            </li>
+                                            <li>
+                                                <a href="#">This Is The Day, Party, Party!</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="events_item">
+                                    <div class="events_image">
+                                        <img src="assets/image/img_3.jpg" alt="">
+                                    </div>
+                                    <div class="events_desc">
+                                            <ul>
+                                                    <li>
+                                                    <span class="date">JAN  20TH, 2019 </span>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#">This Is The Day, Party, Party!</a>
+                                                    </li>
+                                                </ul>
+                                    </div>
+                                </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="social">
+                <div class="container fluid">
+                    <div class="row">
+                        <div class="col-lg-12">                       
+                               <div class="social_panel_full">
+                                   <ul>
+                                       <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                       <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a></li>
+                                       <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                       <li><a href="#"><i class="flaticon-linkedin-logo"></i></a></li>
+                                       <li><a href="#"><i class="flaticon-pinterest-social-logo"></i></a></li>
+                                       <li><a href="#"><i class="flaticon-youtube-logo"></i></a></li>
+                                   </ul>                         
+                                </div>                            
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+    <footer>
+        <section id="footer" class="p-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="footer_item">
+                            <div class="column_header">
+                                <div class="header_name">
+                                    <h1>ABOUT DEEJEE</h1>
+                                </div>
+                            </div>
+                            <div class="column_desc">
+                                <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe pariatur reprehenderit vero atque, consequatur id ratione, et non dignissimos culpa? Ut veritatis, quos illum totam quis blanditiis, minima minus odio!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="footer_item">
+                                <div class="column_header">
+                                    <div class="header_name">
+                                        <h1>SUBSCRIBE</h1>
+                                    </div>
+                                </div>
+                                <div class="column_desc">
+                                    <input type="text" placeholder="Enter your email">
+                                    <input type="submit" value="Subscribe">
+                                </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="footer_item">
+                                    <div class="column_header">
+                                        <div class="header_name">
+                                            <h1>NAVIGATIONS</h1>
+                                        </div>
+                                    </div>
+                                    <div class="column_desc">
+                                       <ul>
+                                           <li><a href="#">HOME</a></li>
+                                           <li><a href="#">Djs</a></li>
+                                           <li><a href="#">News</a></li>
+                                           <li><a href="#">Top 20 of the week</a></li>
+                                       </ul>
+                                       <ul>
+                                            <li><a href="#">About Us</a></li>
+                                            <li><a href="#">Privacy Policy</a></li>
+                                            <li><a href="#">Contact Us</a></li>
+                                            <li><a href="#">Membership</a></li>
+                                        </ul>
+                                    </div>
+                            </div>
+                            <div class="footer_item">
+                                    <div class="column_header">
+                                        <div class="header_name">
+                                            <h1>FOLLOW US</h1>
+                                        </div>
+                                    </div>
+                                    <div class="column_desc">
+                                        <ul class="social_mini">
+                                            <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                            <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a></li>
+                                            <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            <li><a href="#"><i class="flaticon-linkedin-logo"></i></a></li>
+                                        </ul>
+                                    </div>
+                            </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="footer_item">
+                                <div class="streaming_watch">
+                                        <div class="column_header">
+                                            <div class="header_name">
+                                                <h1>WATCH LIVE STREAMING</h1>
+                                            </div>
+                                        </div>
+                                        <div class="streaming_image">
+                                            <span class="circle"></span>
+                                            <img src="assets/image/img_1.webp" alt="">
+                                        </div>
+                                    </div>
+                        </div>               
+
+
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="footer_signature p-50">
+                            <p>Copyright ©2019 All rights reserved | This template is made with <span class="icon-heart"></span>  by Colorlib</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
+
 </html>
