DJS is done, Listeners part is done

--- a/HOMEWORK/index.html
+++ b/HOMEWORK/index.html
@@ -49,6 +49,39 @@
                 </div>
             </div>
         </section> -->
+        <section id="listeners" class="p-100">
+            <div class="container">
+                <div class="row">
+                        <div class="col-lg-12">
+                                <div class="section_header">
+                                    <div class="header_name">
+                                        <h1>LOVE BY OUR LISTENERS</h1>
+                                    </div>
+                                    <div class="header_desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati
+                                        fuga
+                                        itaque deserunt officia, error reiciendis ab quod?
+                                    </div>
+                                </div>
+                            </div>
+                    <div class="col-lg-4">
+                        <div class="listerners_item">
+                            <div class="listeners_image">
+                                <img src="assets/image/person_1.webp" alt="">
+                            </div>
+                            <div class="listeners_desc">
+                                <h1>Megan Smith</h1>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt officia, error reiciendis ab quod?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4"></div>
+                </div>
+            </div>
+        </section>
+
+
         <section id="djs" class="p-100">
             <div class="container">
                 <div class="row">
@@ -58,7 +91,8 @@
                                 <h1>OUR DJS</h1>
                             </div>
                             <div class="header_desc">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati
+                                fuga
                                 itaque deserunt officia, error reiciendis ab quod?
                             </div>
                         </div>
@@ -69,50 +103,197 @@
                                 <img src="assets/image/person_1.webp" alt="">
                             </div>
                             <div class="overflow">
-
+                                <ul>
+                                    <li>
+                                        <div class="dj_name">
+                                            <h1>Megan Smith</h1>
+                                            <span>Creative Director</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="dj_desc">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam
+                                                reprehenderit nemo.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="social_mini">
+                                            <ul>
+                                                <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a>
+                                                </li>
+                                                <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                            <div class="djs_item">
-                                    <div class="djs_image">
-                                        <img src="assets/image/person_1.webp" alt="">
-                                    </div>
-                                    <div class="overflow">
-                                        <ul>
-                                            <li>
-                                                <div class="dj_name">
-                                                    <h1>Megan Smith</h1>
-                                                    <span>Creative Director</span>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="dj_desc">
-                                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="social_mini">
-                                                    <ul>
-                                                        <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
-                                                        <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a></li>
-                                                        <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
-                                                    </ul>
-                                                </div>                                    
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
+                        <div class="djs_item">
+                            <div class="djs_image">
+                                <img src="assets/image/person_2.webp" alt="">
+                            </div>
+                            <div class="overflow">
+                                <ul>
+                                    <li>
+                                        <div class="dj_name">
+                                            <h1>Brooke Cagle</h1>
+                                            <span>Creative Director</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="dj_desc">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam
+                                                reprehenderit nemo.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="social_mini">
+                                            <ul>
+                                                <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a>
+                                                </li>
+                                                <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-lg-4">
-                            <div class="djs_item">
-                                    <div class="djs_image">
-                                        <img src="assets/image/person_1.webp" alt="">
-                                    </div>
-                                    <div class="overflow">
-                                        
-                                    </div>
-                                </div>
+                        <div class="djs_item">
+                            <div class="djs_image">
+                                <img src="assets/image/person_3.webp" alt="">
+                            </div>
+                            <div class="overflow">
+                                <ul>
+                                    <li>
+                                        <div class="dj_name">
+                                            <h1>Phillip Martin</h1>
+                                            <span>Creative Director</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="dj_desc">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam
+                                                reprehenderit nemo.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="social_mini">
+                                            <ul>
+                                                <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a>
+                                                </li>
+                                                <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="djs_item">
+                            <div class="djs_image">
+                                <img src="assets/image/person_5.jpg" alt="">
+                            </div>
+                            <div class="overflow">
+                                <ul>
+                                    <li>
+                                        <div class="dj_name">
+                                            <h1>Nathan Dumlao</h1>
+                                            <span>Creative Director</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="dj_desc">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam
+                                                reprehenderit nemo.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="social_mini">
+                                            <ul>
+                                                <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a>
+                                                </li>
+                                                <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="djs_item">
+                            <div class="djs_image">
+                                <img src="assets/image/person_4.webp" alt="">
+                            </div>
+                            <div class="overflow">
+                                <ul>
+                                    <li>
+                                        <div class="dj_name">
+                                            <h1>Steven Ericcson</h1>
+                                            <span>Creative Director</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="dj_desc">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam
+                                                reprehenderit nemo.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="social_mini">
+                                            <ul>
+                                                <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a>
+                                                </li>
+                                                <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="djs_item">
+                            <div class="djs_image">
+                                <img src="assets/image/person_6.jpg" alt="">
+                            </div>
+                            <div class="overflow">
+                                <ul>
+                                    <li>
+                                        <div class="dj_name">
+                                            <h1>Phillip Martin</h1>
+                                            <span>Creative Director</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="dj_desc">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit ullam
+                                                reprehenderit nemo.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="social_mini">
+                                            <ul>
+                                                <li><a href="#"><i class="flaticon-facebook-logo"></i></a></li>
+                                                <li><a href="#"><i class="flaticon-twitter-logo-silhouette"></i></a>
+                                                </li>
+                                                <li><a href="#"><i class="flaticon-instagram-logo"></i></a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -134,7 +315,7 @@
                     <div class="col-lg-4">
                         <div class="events_item">
                             <div class="events_image">
-                                <img src="assets/image/img_4.jpg" alt="">
+                               <a href="#"> <img src="assets/image/img_4.jpg" alt=""> </a>
                             </div>
                             <div class="events_desc">
                                     <ul>
@@ -151,7 +332,7 @@
                     <div class="col-lg-4">
                             <div class="events_item">
                                     <div class="events_image">
-                                        <img src="assets/image/img_2.jpg" alt="">
+                                      <a href="#"> <img src="assets/image/img_2.jpg" alt=""> </a>  
                                     </div>
                                     <div class="events_desc">
                                         <ul>
@@ -168,7 +349,7 @@
                     <div class="col-lg-4">
                             <div class="events_item">
                                     <div class="events_image">
-                                        <img src="assets/image/img_3.jpg" alt="">
+                                       <a href="#"> <img src="assets/image/img_3.jpg" alt=""> </a> 
                                     </div>
                                     <div class="events_desc">
                                             <ul>
