Listeners is done

--- a/HOMEWORK/index.html
+++ b/HOMEWORK/index.html
@@ -49,6 +49,34 @@
                 </div>
             </div>
         </section> -->
+        <section id="shows" class="p-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                            <div class="section_header">
+                                    <div class="header_name">
+                                        <h1>UPCOMING SHOWS</h1>
+                                    </div>
+                                    <div class="header_desc">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt officia, error reiciendis ab quod?
+                                    </div>
+                                </div>
+                    </div>
+                   <div class="col-lg-3">
+                       <div class="shows_item">
+                           <div class="item_image">
+                                <img src="assets/image/img_1.webp" alt="">
+                           </div>                           
+                       </div>
+                   </div>
+                   <div class="col-lg-3"></div>
+                   <div class="col-lg-3"></div>
+                   <div class="col-lg-3"></div>
+                </div>
+            </div>
+        </section>
+
+
         <section id="listeners" class="p-100">
             <div class="container">
                 <div class="row">
@@ -58,9 +86,7 @@
                                         <h1>LOVE BY OUR LISTENERS</h1>
                                     </div>
                                     <div class="header_desc">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati
-                                        fuga
-                                        itaque deserunt officia, error reiciendis ab quod?
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt officia, error reiciendis ab quod?
                                     </div>
                                 </div>
                             </div>
@@ -71,16 +97,35 @@
                             </div>
                             <div class="listeners_desc">
                                 <h1>Megan Smith</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, fugit nam obcaecati fuga itaque deserunt officia, error reiciendis ab quod?</p>
+                                <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?”</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4"></div>
-                    <div class="col-lg-4"></div>
+                    <div class="col-lg-4">
+                            <div class="listerners_item">
+                                    <div class="listeners_image">
+                                        <img src="assets/image/person_4.webp" alt="">
+                                    </div>
+                                    <div class="listeners_desc">
+                                        <h1>Brooke Smith</h1>
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?”</p>
+                                    </div>
+                                </div>
+                    </div>
+                    <div class="col-lg-4">
+                            <div class="listerners_item">
+                                    <div class="listeners_image">
+                                        <img src="assets/image/person_2.webp" alt="">
+                                    </div>
+                                    <div class="listeners_desc">
+                                        <h1>Megan Smith</h1>
+                                        <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, iusto. Aliquam illo, cum sed ea? Ducimus quos, ea?”</p>
+                                    </div>
+                                </div>
+                    </div>
                 </div>
             </div>
         </section>
-
 
         <section id="djs" class="p-100">
             <div class="container">
